v1
    - Add Nougat SELinux patch
v2
    - deep_buffer and raw removal for more compatibility
    - Fix /system/vendor/audio_effects.conf on OnePlus3OxygenOS
    - Set props through two different approaches.
v3
    - rebuild to compatiblize with Magisk v9, set props by resetprop method.
v4
    - Install ViPER4Android app automatically during boot 