@@ -1,0 +1,22 @@
+# Set the default behavior, in case people don't have core.autocrlf set.
+* text=auto
+
+# Explicitly declare text files you want to always be normalized and converted
+# to native line endings on checkout.
+*.c text
+*.h text
+
+# Declare files that will always have LF line endings on checkout.
+*.sln text eol=lf
+*.txt text eol=lf
+*.sh text eol=lf
+*.md text eol=lf
+*.prop text eol=lf
+file_contexts_image text eol=lf
+update-binary text eol=lf
+updater-script text eol=lf
+# Denote all files that are truly binary and should not be modified.
+*.png binary
+*.jpg binary
+*.apk binary
+*.so binary
