@@ -2,21 +2,42 @@
 # Please don't hardcode /magisk/modname/... ; instead, please use $MODDIR/...
 # This will make your scripts compatible even if Magisk change its mount point in the future
 MODDIR=${0%/*}
+LOGFILE=/cache/magisk.log
+buildname="custom_build.prop"
+RESETPROP="/data/magisk/resetprop"
+MODNAME=${MODDIR#/magisk}
+
+log_print() {
+  echo "$MODNAME: $1"
+  echo "$MODNAME: $1" >> $LOGFILE
+  log -p i -t $MODNAME "$1"
+}
 
 # This script will be executed in late_start service mode
 # More info in the main Magisk thread
 
-# Set any prop (with trigger)
+if [ -f "$MODDIR/$buildname" ]; then
+  log_print "Setting props through $MODDIR/$buildname"
+  "$RESETPROP" --file "$MODDIR/$buildname"
+elif [ -f "/magisk/tweakprop/$buildname" ]; then
+  log_print "Setting props through /magisk/tweakprop/$buildname"
+  "$RESETPROP" --file "/magisk/tweakprop/$buildname"
+else
+  # Set any prop (with trigger)
+  log_print "Setting props through servie.sh"
+  # LOW POWER AUDIO TWEAKS
+  "$RESETPROP" lpa.decode false
+  "$RESETPROP" lpa.releaselock false
+  "$RESETPROP" lpa.use-stagefright false
+  "$RESETPROP" tunnel.decode false
+  
+  # OTHER AUDIO TWEAKS
+  "$RESETPROP" audio.deep_buffer.media false
+  "$RESETPROP" tunnel.audiovideo.decode false
+  "$RESETPROP" persist.sys.media.use-awesome 1
+  "$RESETPROP" ro.audio.samplerate 48000
+  "$RESETPROP" ro.audio.pcm.samplerate 48000
 
-# LOW POWER AUDIO TWEAKS
-/data/magisk/resetprop lpa.decode false
-/data/magisk/resetprop lpa.releaselock false
-/data/magisk/resetprop lpa.use-stagefright false
-/data/magisk/resetprop tunnel.decode false
+fi
 
-# OTHER AUDIO TWEAKS
-/data/magisk/resetprop audio.deep_buffer.media false
-/data/magisk/resetprop tunnel.audiovideo.decode false
-/data/magisk/resetprop persist.sys.media.use-awesome 1
-/data/magisk/resetprop ro.audio.samplerate 48000
-/data/magisk/resetprop ro.audio.pcm.samplerate 48000
+log_print "Resetprop done."
