@@ -1,7 +1,7 @@
 id=v4a
 name=ViPER4Android FX
 version=v2.4.0.1
-versionCode=4
+versionCode=5
 author=ViPER’s Audio
 description=Popular sound mod by ViPER’s Audio, ported to Magisk by topjohnwu, adapted by laggardkernel for more compatibility
 support=http://forum.xda-developers.com/showthread.php?t=2191223
